# br-construction-indicators-etl

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pipeline.py  pyproject.toml  requirements.txt
app/: main.py
pipeline/: pipeline.py
src/config/: api_settings.py  settings.py
src/gold/: gold.py
src/ingestion/: bcb.py  ibge.py
src/silver/: bcb.py  ibge.py
src/tests/: bronze.py  gold.py  silver copy.py  silver.py  teste.py  teste_ind.py
